--- a/MinimalAPI/docker-compose.yaml
+++ b/MinimalAPI/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.8'
 services:
-  sqlServer:
+  sqlserver:
     image: "mcr.microsoft.com/mssql/server:2019-latest"
     environment:
       ACCEPT_EULA: "Y"
-      SA_PASSWORD: "P@$$w0rd"
+      SA_PASSWORD: "P@55w0rd!"
       MSSQL_PID: "Express"
     ports:
       - "1433:1433"
